2010-Aug-11 caf  Added camsend flag --opalexp: integration time (0.01 - 320.00 ms, default frame period minus 0.1) (Opal only).
2010-Aug-10 weaver	Tag V02-06-00.  Added FEX algorithm to IpimbManager and non-default LusiDiagFex instance.
2010-Jun-08 weaver	Added separate a/b tap reference voltages for TM6740 camera.  Fixed payload size of Ipimb config.
2010-Jun-06 weaver	Tag V02-02-02.  Changed pds/encoder/pci3e_dev to clear_fifo on unconfigure to cleanup
			after a messy shutdown.  Added ENABLE bit to pci3e_dev configure to enable capture of
			encoder values.
2010-May-25 weaver	Changed PartitionControl delay for Disable to 0.2s (greater than camera shutter width).
			Changed EbTimeouts to be hierarchical to clarify where the timeout occurs.
			Added 10ms delay in ToEventWireScheduler between flush of L1A and Disable to
			alleviate coalescing of the two.
2010-Apr-27 weaver	evgr/EvrManager now reconfigures on BeginCalibCycle.  Changed acqiris/AcqManager
			to generate ClearReadout occurrence only once until cleared.
2010-Apr-14 weaver	Changed InDatagram/Datagram relationship to inheritance rather than contains.
			Protected EbBase from crashing on late L1Accepts (after Unmap).
2010-Mar-15 weaver	Tag V01-09-00.  Added traffic shaping to segment levels.
2010-Mar-12 weaver	Refactor pds/camera classes for FCCD implementation.
2009-Dec-03 tomytsai    Update epicsArch classes to skip missing PVs and report damage, and also limit on the number of 
      no-connection errors reported to the console (or log file)
2009-Dec-03 weaver  Tag V01-08-01.  Enabled select mask in the event builder.  Fixed data
      corruption associated with event builder "cache misses" (on split events).
      Tagged top-level xtc with IncompleteContribution damage when cache-miss chunk
      writes beyond end of xtc payload (rce only - last chunk size is not maximum).
2009-Nov-18 weaver  Tag V01-06-01.  Changed ObserverLevel to take a mask of event-level nodes to monitor.